# gitcode-cli

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/gitcode-api/: auth-and-conventions.md  endpoint-catalog.json
docs/: AUTH.md  COMMANDS.md  GH_DIFFERENCES.md  INSTALL.md
docs/screenshots/src/: cli-overview.html  docs-search.html  styles.css  workflow.html
src/gitcode_cli/: __init__.py  context.py  main.py
src/gitcode_cli/api/: catalog.py  client.py
src/gitcode_cli/assets/: __init__.py
src/gitcode_cli/assets/gitcode_api/: __init__.py  tested-behaviors.md
src/gitcode_cli/auth/: credentials.py
src/gitcode_cli/commands/: __init__.py  api.py  auth.py  common.py  completion.py  config_cmd.py  issue.py  pr.py  release.py  repo.py  search.py
src/gitcode_cli/config/: store.py
src/gitcode_cli/formatting/: output.py
src/gitcode_cli/git/: repo.py
tests/: test_api_client.py  test_cli.py  test_config.py  test_live_smoke.py
